--- a/templates/index.html
+++ b/templates/index.html
@@ -17,12 +17,12 @@
 <body>
     <h1 id='title'>多用户留言板系统</h1>
     <div class="row" id="guide">
-        <div class="col-md-1 col-lg-1"><a href="{{ url_for('index') }}"> 主页 </a></div>
-        <div class="col-md-1 col-lg-1"><a href="{{ url_for('myPage') }}"> 个人中心 </a></div>
+        <div class="col-md-1 col-lg-1"><a href="{{ url_for('router.index') }}"> 主页 </a></div>
+        <div class="col-md-1 col-lg-1"><a href="{{ url_for('router.myPage') }}"> 个人中心 </a></div>
         <div class="col-md-1 col-lg-1"><p> 消息中心 </p></div>
         <div class="col-md-7 col-lg-7"></div>
-        <div class="col-md-1 col-lg-1"><a href="{{ url_for('signUp') }}"> 注册 </a></div>
-        <div class="col-md-1 col-lg-1"><a href="{{ url_for('login') }}"> 登录 </a></div>
+        <div class="col-md-1 col-lg-1"><a href="{{ url_for('router.register') }}"> 注册 </a></div>
+        <div class="col-md-1 col-lg-1"><a href="{{ url_for('router.login') }}"> 登录 </a></div>
     </div>
     <div class="row">
         <div class="col-md-3 col-lg-3" id='friend'><h1>关注管理的地方</h1></div>
