--- a/templates/register.html
+++ b/templates/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="signUp" content="width=device-width, initial-scale=1.0">
+    <meta name="register" content="width=device-width, initial-scale=1.0">
     <title>用户注册</title>
 </head>
 <body>
