--- a/templates/textEdit.html
+++ b/templates/textEdit.html
@@ -1,14 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="textEdit" content="width=device-width, initial-scale=1.0">
-    <title>留言编辑</title>
-</head>
-<body>
-    <h1>上传下载pdf文件</h1><br>
-    <h1>插入图片</h1><br>
-    <h1>md编辑留言</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block title %}留言编辑{% endblock %}
+
+{% block body %}
+<h1>上传下载pdf文件</h1><br>
+<h1>插入图片</h1><br>
+<h1>md编辑留言</h1>
+{% endblock %}
