--- a/templates/register.html
+++ b/templates/register.html
@@ -1,12 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="register" content="width=device-width, initial-scale=1.0">
-    <title>用户注册</title>
-</head>
-<body>
-    
-</body>
-</html>
+{% extends 'base.html' %}
+{% block title %}用户注册{% endblock %}
