--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,19 @@
 {% block navbar %}
 <nav class="navbar navbar-inverse" style="border-radius: 0px;">
     <div class="container">
+        <div class="navbar-header">
+            <button type="button" 
+                    class="navbar-toggle collapsed" 
+                    data-toggle="collapse"
+                    data-target=".navbar-collapse" 
+                    aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">博客</a>
+        </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li><a href="{{ url_for('router.index') }}">主页</a></li>
