--- a/static/site.css
+++ b/static/site.css
@@ -46,3 +46,26 @@
     width: 400px;
     margin: 5px;
 }
+
+#mypageNav {
+    font-size: 20px;
+    background-color: #e9eef3;
+    /* width: 20%; */
+    padding: 30px;
+    margin: 0px;
+    height: 850px;
+    list-style: none;
+}
+
+#mypageNav li{
+    padding-bottom: 20px;
+}
+
+#infoTable td{
+    font-family: Verdana;
+    font-size: 18px;
+    width: 200px;
+    padding: 15px;
+    text-align: center;
+    border: 5px solid #777777;
+}
