--- a/static/site.css
+++ b/static/site.css
@@ -18,11 +18,54 @@
 #friend {
     background-color: antiquewhite;
     text-align: center;
-    min-height: 500px;
+    min-height: 850px;
 }
 
 #indexText {
     background-color:aliceblue;
     text-align: center;
-    min-height: 500px;
+    min-height: 850px;
+}
+
+#registerTable ,#loginTable{
+    border-top: 5px solid #777777;
+    border-left: 5px solid #777777;
+    background-color:aliceblue;
+    box-shadow: 10px 10px 30px #777777;
+}
+
+#loginTable td, #registerTable td{
+    font-family: Verdana;
+    font-size: 18px;
+    width: 150px;
+    padding: 15px;
+    text-align: center;
+}
+
+#registerTable #inputText,#loginTable #inputText{
+    width: 400px;
+    margin: 5px;
+}
+
+#mypageNav {
+    font-size: 20px;
+    background-color: #e9eef3;
+    /* width: 20%; */
+    padding: 30px;
+    margin: 0px;
+    height: 850px;
+    list-style: none;
+}
+
+#mypageNav li{
+    padding-bottom: 20px;
+}
+
+#infoTable td{
+    font-family: Verdana;
+    font-size: 18px;
+    width: 200px;
+    padding: 15px;
+    text-align: center;
+    border: 5px solid #777777;
 }
