--- a/templates/diaryLoss.html
+++ b/templates/diaryLoss.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}主页{% endblock %}
+{% block title %}日志不全或无操作日志{% endblock %}
 
 {% block styles %}
     {{ super() }}
