--- a/templates/httpHeader.html
+++ b/templates/httpHeader.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}主页{% endblock %}
+{% block title %}HTTP Header注入漏洞{% endblock %}
 
 {% block styles %}
     {{ super() }}
