--- a/templates/contentTraverse.html
+++ b/templates/contentTraverse.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}主页{% endblock %}
+{% block title %}目标遍历漏洞{% endblock %}
 
 {% block styles %}
     {{ super() }}
