--- a/templates/csrf.html
+++ b/templates/csrf.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}主页{% endblock %}
+{% block title %}跨站请求伪造（CSRF）漏洞{% endblock %}
 
 {% block styles %}
     {{ super() }}
