--- a/templates/fileDownload.html
+++ b/templates/fileDownload.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}主页{% endblock %}
+{% block title %}文件下载漏洞{% endblock %}
 
 {% block styles %}
     {{ super() }}
