--- a/templates/fileUpload.html
+++ b/templates/fileUpload.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}主页{% endblock %}
+{% block title %}文件上传漏洞{% endblock %}
 
 {% block styles %}
     {{ super() }}
