--- a/templates/penetration.html
+++ b/templates/penetration.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}主页{% endblock %}
+{% block title %}渗透测试安全漏洞{% endblock %}
 
 {% block styles %}
     {{ super() }}
