--- a/templates/xss.html
+++ b/templates/xss.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}主页{% endblock %}
+{% block title %}跨站脚本（XSS）漏洞{% endblock %}
 
 {% block styles %}
     {{ super() }}
