--- a/static/site.css
+++ b/static/site.css
@@ -33,6 +33,12 @@
     background-color:aliceblue;
     box-shadow: 10px 10px 30px #777777;
     font-size: 18px;
+}
+
+#loginTable td, #registerTable td{
+    font-family: Verdana;
+    font-size: 18px;
+    width: 150px;
     padding: 15px;
     text-align: center;
 }
