Feature fileDownload fileUpload sqlPush -更新了文件上传漏洞 -删除了up_download.py接口 -更新了文件下载漏洞   其中fileDownload路由需要更改数据库，但尚未更改 -更新了sql注入漏洞   原来的登录逻辑就防护了sql注入，无需重写

--- a/templates/fileDownload.html
+++ b/templates/fileDownload.html
@@ -7,5 +7,18 @@
 {% endblock %}
 
 {% block content %}
-
+<input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+<ul class="list-group">
+    {% for file in files%}
+        <form method="get" action="/download" enctype="multipart/form-data">
+            <li class="list-group-item">
+                <label>文件名：</label>
+                {{ file.filename }}
+<!--                <input type="hidden" value="{{ file.filename }}" name="filename">-->
+                <input type="hidden" value="pdf_files/{{ file.filename }}" name="filepath">
+                <input type="submit" value="下载文件">
+            </li>
+        </form>
+    {% endfor %}
+</ul>
 {% endblock %}
