--- a/templates/sqlPush.html
+++ b/templates/sqlPush.html
@@ -7,5 +7,23 @@
 {% endblock %}
 
 {% block content %}
-
+<form method="post">
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+    <table id="loginTable" align="center">
+        <tr>
+            <td><label>用户名:</label></td>
+            <td><input type="text" name="id" placeholder="请输入账号"></td>
+        </tr>
+        <tr>
+            <td><label>密码:</label></td>
+            <td><input type="password" name="pwd" placeholder="请输入密码"></td>
+        </tr>
+        <tr>
+            <td colspan="2">
+                <input type="submit" value="登录">
+                <input type="reset" value="重置">
+            </td>
+        </tr>
+    </table>
+</form>
 {% endblock %}
