--- a/templates/penetration.html
+++ b/templates/penetration.html
@@ -8,4 +8,11 @@
 
 {% block content %}
 
+<form method="post">
+    {{ form.csrf_token() }}
+    {{ form.username.label }} {{ form.username }} <br>
+    {{ form.password.label }} {{ form.password }} <br>
+    {{ form.login }}
+</form>
+
 {% endblock %}
