--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
                 <li><a href="{{ url_for('router.fileDownload') }}">文件下载</a></li>
                 <li><a href="{{ url_for('router.fileUpload') }}">文件上传</a></li>
                 <li><a href="{{ url_for('router.diaryLoss') }}">日志不全</a></li>
-                <li><a href="{{ url_for('router.penetration') }}">渗透测试安全</a></li>
+                <li><a href="{{ url_for('router.validate') }}">身份验证漏洞</a></li>
             </ul>
         </div>
     </div>
