--- a/templates/csrf.html
+++ b/templates/csrf.html
@@ -8,10 +8,10 @@
 
 {% block content %}
 {% if user != None %}
-<div id='csrf'>
+<div class='csrf'>
     <div>已登录：{{ user['username'] }}</div>
     <div>余额：{{ user['money'] }}</div>
-    <form id="csrf" method="POST">
+    <form class="csrf" method="POST">
         <!-- 删除csrf_token句即可关闭 -->
         <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
         <input type="text" placeholder="输入转账用户" name="touser">
@@ -21,7 +21,7 @@
     <a href="../static/csrf_hack.html">csrf漏洞</a>
 </div>
 {% else %}
-<div id='csrf'>
+<div class='csrf'>
     <div>未登录！</div>
 </div>
 {% endif %}
