--- a/templates/validate.html
+++ b/templates/validate.html
@@ -8,11 +8,15 @@
 
 {% block content %}
 
-<form method="post">
+<form id="registerValidate" method="post">
     {{ form.csrf_token() }}
     {{ form.username.label }} {{ form.username }} <br>
     {{ form.password.label }} {{ form.password }} <br>
-    {{ form.login }}
+    {{ form.repwd.label }} {{ form.repwd }} <br>
+    {{ form.register }} <br>
+    {% for message in get_flashed_messages() %}
+        {{ message }}
+    {% endfor %}
 </form>
 
 {% endblock %}
