--- a/static/site.css
+++ b/static/site.css
@@ -1,32 +1,3 @@
-#title {
-    background-color: cornflowerblue;
-    text-align: left;
-    font-weight: bold;
-    padding: 10px;
-}
-
-#guide {
-    background-color: #e9eef3;
-    text-align: center;
-    font-size: 20px;
-    padding: 0px;
-    padding-top: 10px;
-    margin: 0px;
-    margin-bottom: 10px;
-}
-
-#friend {
-    background-color: antiquewhite;
-    text-align: center;
-    min-height: 850px;
-}
-
-#indexText {
-    background-color: aliceblue;
-    text-align: center;
-    min-height: 850px;
-}
-
 #registerTable, #loginTable, #registerValidate{
     border-top: 5px solid #777777;
     border-left: 5px solid #777777;
@@ -42,35 +13,7 @@
     margin: 5px;
 }
 
-#mypageNav {
-    font-size: 20px;
-    background-color: #e9eef3;
-    /* width: 20%; */
-    padding: 30px;
-    margin: 0px;
-    height: 850px;
-    list-style: none;
-}
-
-#mypageNav li{
-    padding-bottom: 20px;
-}
-
-#infoTable td{
-    font-family: Verdana;
-    font-size: 18px;
-    width: 200px;
-    padding: 15px;
-    text-align: center;
-    border: 5px solid #777777;
-}
-
-#xss {
-    text-align: center;
-    font-size: 20px;
-}
-
-.csrf {
+.csrf, .xss{
     margin-top: 50px;
     text-align: center;
     font-size: 20px;
