--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,7 @@
                 <li><a href="{{ url_for('router.fileUpload') }}">文件上传</a></li>
                 <li><a href="{{ url_for('router.diaryLoss') }}">日志不全</a></li>
                 <li><a href="{{ url_for('router.validate') }}">身份验证漏洞</a></li>
+                <li><a href="{{ url_for('router.ultra_vires') }}">越权访问漏洞</a></li>
             </ul>
         </div>
     </div>
