--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}文件上传漏洞{% endblock %}
+{% block title %}管理员页面{% endblock %}
 
 {% block styles %}
 {{ super() }}
@@ -7,9 +7,12 @@
 {% endblock %}
 
 {% block content %}
-<form method="post" enctype="multipart/form-data">
+
+<form class="csrf" method="post">
     <!-- 添加csrf_token句即可开启csrf保护 -->
-    <input type="file" name="pdf" accept="application/pdf">
-    <input type="submit" value="提交">
+    <label>请输入要删除的用户id</label>
+    <input type="text" name="uid">
+    <input type="submit" class="btn btn-danger" value="删除用户">
 </form>
+
 {% endblock %}
