--- a/static/site.css
+++ b/static/site.css
@@ -1,4 +1,4 @@
-#registerTable, #loginTable, #registerValidate{
+#registerTable, .loginTable, #registerValidator{
     border-top: 5px solid #777777;
     border-left: 5px solid #777777;
     background-color: aliceblue;
@@ -6,6 +6,14 @@
     font-size: 18px;
     padding: 15px;
     text-align: center;
+}
+
+#registerValidator label{
+    width: 150px;
+    display: inline-block;
+    text-align: right;
+    padding-right: 10px;
+    font-weight: bold;
 }
 
 #registerTable #inputText,#loginTable #inputText{
