--- a/templates/base.html
+++ b/templates/base.html
@@ -7,10 +7,10 @@
 <nav class="navbar navbar-inverse" style="border-radius: 0px;">
     <div class="container">
         <div class="navbar-header">
-            <button type="button" 
-                    class="navbar-toggle collapsed" 
+            <button type="button"
+                    class="navbar-toggle collapsed"
                     data-toggle="collapse"
-                    data-target=".navbar-collapse" 
+                    data-target=".navbar-collapse"
                     aria-expanded="false">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
@@ -30,6 +30,7 @@
                 <li><a href="{{ url_for('router.fileUpload') }}">文件上传</a></li>
                 <li><a href="{{ url_for('router.diaryLoss') }}">日志不全</a></li>
                 <li><a href="{{ url_for('router.validate') }}">身份验证漏洞</a></li>
+                <li><a href="{{ url_for('router.ultra_vires') }}">越权访问漏洞</a></li>
             </ul>
         </div>
     </div>
