--- a/templates/validate.html
+++ b/templates/validate.html
@@ -2,21 +2,37 @@
 {% block title %}渗透测试安全漏洞{% endblock %}
 
 {% block styles %}
-    {{ super() }}
-    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='site.css')}}" />
+{{ super() }}
+<link rel="stylesheet" type="text/css" href="{{url_for('static', filename='site.css')}}"/>
 {% endblock %}
 
 {% block content %}
-
+{#
 <form id="registerValidate" method="post">
-    <!-- 添加csrf_token句即可开启csrf保护 -->
+    添加csrf_token句即可开启csrf保护
     {{ form.username.label }} {{ form.username }} <br>
     {{ form.password.label }} {{ form.password }} <br>
     {{ form.repwd.label }} {{ form.repwd }} <br>
     {{ form.register }} <br>
     {% for message in get_flashed_messages() %}
-        {{ message }}
+    {{ message }}
     {% endfor %}
 </form>
+#}
+<div class='csrf'>
+    <form id="registerValidator" method="post">
+        <!-- 添加csrf_token句即可开启csrf保护 -->
+        <label>username:</label>
+        <input type="text" placeholder="请输入要注册的用户名" name="username"><br>
+        <label>password:</label>
+        <input type="password" placeholder="请输入密码" name="password"><br>
+        <label>repeat:</label>
+        <input type="password" placeholder="请再次输入密码" name="repwd"><br>
+        <input type="submit" value="确认"><br>
+        {% for msg in message %}
+        {{ msg }}
+        {% endfor %}
+    </form>
+</div>
 
 {% endblock %}
