--- a/templates/httpHeader.html
+++ b/templates/httpHeader.html
@@ -7,5 +7,12 @@
 {% endblock %}
 
 {% block content %}
-
+<div class="csrf">
+    {% if msg == 'success' %}
+    <div>Host:{{ headers.Host }}</div>
+    <div>User-Agent:{{ headers['User-Agent'] }}</div>
+    {% else %}
+    <div>httpHeader被更改!</div>
+    {% endif %}
+</div>
 {% endblock %}
