明文传输漏洞 - 使用RSA非对称加密算法实现传输过程中对敏感数据的保护 - 后端引入新的第三方库 pycryptodome - 前端引入新的第三方库 jsencrpt - 添加了新的路由router.encrypt - router.encrypt路由中实现了安全的登录方法（对比router.index中的登录方法） - config目录下添加了cryptoconfig配置文件，用于在程序运行时间之外产生公钥和秘钥（公钥和秘钥文件保存在config目录下，分别为public_key.pem和private_key.pem） - utils目录下添加了cryptoutil工具模块，实现后端解密 - static目录下添加了encrypt.js文件，实现前端加密

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,7 @@
                 <li><a href="{{ url_for('router.diaryLoss') }}">日志不全</a></li>
                 <li><a href="{{ url_for('router.validate') }}">身份验证漏洞</a></li>
                 <li><a href="{{ url_for('router.ultra_vires') }}">越权访问漏洞</a></li>
+                <li><a href="{{ url_for('router.encrypt') }}">明文传输漏洞</a></li>
             </ul>
         </div>
     </div>
