--- a/templates/httpHeader.html
+++ b/templates/httpHeader.html
@@ -7,12 +7,16 @@
 {% endblock %}
 
 {% block content %}
-<div class="csrf">
-    {% if msg == 'success' %}
-    <div>Host:{{ headers.Host }}</div>
-    <div>User-Agent:{{ headers['User-Agent'] }}</div>
-    {% else %}
-    <div>httpHeader被更改!</div>
-    {% endif %}
+{% if user != None %}
+<div class='csrf'>
+    <div>已登录：{{ user['username'] }}</div>
+    <div>邮箱：{{ user['email'] }}</div>
+    <div>个性签名：{{ user['signature'] }}</div>
+    <div>余额：{{ user['money'] }}</div>
 </div>
+{% else %}
+<div class='csrf'>
+    <div>未登录！</div>
+</div>
+{% endif %}
 {% endblock %}
