--- a/templates/validate.html
+++ b/templates/validate.html
@@ -7,19 +7,20 @@
 {% endblock %}
 
 {% block content %}
-{#
+
 <form id="registerValidate" method="post">
-    <!-- 添加csrf_token句即可开启csrf保护 -->
-    {{ form.csrf_token() }}
-    {{ form.username.label }} {{ form.username }} <br>
-    {{ form.password.label }} {{ form.password }} <br>
-    {{ form.repwd.label }} {{ form.repwd }} <br>
-    {{ form.register }} <br>
-    {% for message in get_flashed_messages() %}
-    {{ message }}
-    {% endfor %}
+    <div class="csrf">
+        {{ form.csrf_token() }}
+        {{ form.username.label }} {{ form.username }} <br>
+        {{ form.password.label }} {{ form.password }} <br>
+        {{ form.repwd.label }} {{ form.repwd }} <br>
+        {{ form.register }} <br>
+        {% for message in get_flashed_messages() %}
+        {{ message }}
+        {% endfor %}
+    </div>
 </form>
-#}
+{#
 <div class='csrf'>
     <form id="registerValidator" method="post">
         <!-- 添加csrf_token句即可开启csrf保护 -->
@@ -36,5 +37,5 @@
         {% endfor %}
     </form>
 </div>
-
+#}
 {% endblock %}
